added method for lifting interfaces, along with 3 test cases. lifter no longer uses fully qualified names for anything but the primaryType in CompilationUnits.